--- a/akon.html
+++ b/akon.html
@@ -40,8 +40,32 @@
 	<div class="px-10">
 	<div id="page-wrap">
 	<h1 class="display-5">Project A-kon</h1>
-
+		
+<p>A-Kon is regarded as the United States' first major anime convention. Originally titled Project A-Kon, after Project A-Ko, a 
+	1986 anime film, the convention became A-Kon in 2000. Due ot its size and early entrance into the convention scenes,
+	A-Kon has been known for its wide variety of American guests, including artists, writers and actors from broader science
+	fiction, videogame and fantasy media. Guests at A-Kon have included Helen McCarthy, Ishikawa Mitsuhisa (Production IG),
+	and Matt Mercer (Overwatch).
+	<br><br>
+	A-Kon is part of a larger trend in fan conventions to incorporate academia into its programming. A separate academic track
+	is part of the convention. The FANS conference is connected to the academic journal The Phoenix Papers and has hosted
+	academic and industry guests.
+	<br><br>
+	Recently, A-Kon has undergone a change in ownership. While the ramifications of this change is yet to be apparent, the
+	change is indicative of the increasing corporatization of the anime industry. Larger company owned conventions have
+	been the trend since the early 2010s as increasing costs and increasing profits have made fan-operated conventions vunerable
+	.
 	
+
+<h1 class="display-5">Project A-kon Information</h1>	
+First year: 1990<br><br>
+Type of convention: Convention center based, formerly hotel/convention center based.<br><br>
+Location: Fair Park, Dallas, TX.<br><br>
+Attendance: 34000 in 2018<br><br>
+Directors: Phoenix Entertainment until 2019.<br><br>
+		
+		
+		
 <!-- Page Content -->
 <div class="container">
 
