--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ var geojson = {
     },
     properties: {
       title: 'A-Kon',
-        description: '<strong>First anime convention in the United States</strong><br><a href=\"" target=\"_blank\" title=\"Opens in a new window\">A-Kon</a>',
+        description: '<strong>First anime convention in the United States</strong><br><a href=\"" target=https://fandinod.github.io/americanconventions/akon title=\"Opens in a new window\">A-Kon</a>',
     }
   },
   {
@@ -162,7 +162,7 @@ var geojson = {
     },
     properties: {
       title: 'Anime Festival Orlando',
-        description: '<strong>Anime Festival Orlando, 1999</strong><br><a href=\"" target=\"_blank\" title=\"Opens in a new window\">Anime Festival Orlando</a>',
+        description: '<strong>Anime Festival Orlando, 1999</strong><br><a href=\"" target=https://fandinod.github.io/americanconventions/afo title=\"Opens in a new window\">Anime Festival Orlando</a>',
     }
      },
      {
