--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!--自分が好きじゃないの-->  <p class="m-0 text-center text-white">American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States.
                                             Click on the map below to learn more about a convention. For an overview of the project, visit Introduction in the top menu.</p>
 
-    <!--自分が好きじゃないの--></header>
+https://fandinod.github.io/americanconventions/afo    <!--自分が好きじゃないの--></header>
  
 
     <!-- Page Features -->
@@ -129,7 +129,7 @@ var geojson = {
     },
     properties: {
       title: 'A-Kon',
-        description: '<strong>First anime convention in the United States</strong><br><a href=\"" target="https://fandinod.github.io/americanconventions/akon" title=\"Opens in a new window\">A-Kon</a>',
+        description: '<strong>First anime convention in the United States</strong><br><a href=\"https://fandinod.github.io/americanconventions/akon" target="https://fandinod.github.io/americanconventions/akon" title=\"Opens in a new window\">A-Kon</a>',
     }
   },
   {
@@ -162,7 +162,7 @@ var geojson = {
     },
     properties: {
       title: 'Anime Festival Orlando',
-        description: '<strong>Anime Festival Orlando, 1999</strong><br><a href=\"" target="https://fandinod.github.io/americanconventions/afo" title=\"Opens in a new window\">Anime Festival Orlando</a>',
+        description: '<strong>Anime Festival Orlando, 1999</strong><br><a href=\"https://fandinod.github.io/americanconventions/afo" target="https://fandinod.github.io/americanconventions/afo" title=\"Opens in a new window\">Anime Festival Orlando</a>',
     }
      },
      {
