--- a/akon.html
+++ b/akon.html
@@ -53,15 +53,19 @@
 	<br><br>
 	Recently, A-Kon has undergone a change in ownership. While the ramifications of this change is yet to be apparent, the
 	change is indicative of the increasing corporatization of the anime industry. Larger company owned conventions have
-	been the trend since the early 2010s as increasing costs and increasing profits have made fan-operated conventions vunerable
+	been the trend since the early 2010s as increasing costs and increasing profits have made fan-operated conventions vunerable.
+	A-Kon released a statement outlining the financial difficulties that hit the convention in 2018. 
+	<br><br>
+	A-Kon's financial situation illuminates many of the various issues that are ovetaking conventions and make their study difficult.
+	
 	.
 	
 
 <h1 class="display-5">Project A-kon Information</h1>	
-First year: 1990<br><br>
-Type of convention: Convention center based, formerly hotel/convention center based.<br><br>
-Location: Fair Park, Dallas, TX.<br><br>
-Attendance: 34000 in 2018<br><br>
+First year: 1990<br>
+Type of convention: Convention center based, formerly hotel/convention center based.<br>
+Location: Fair Park, Dallas, TX.<br>
+Attendance: 34000 in 2018<br>
 Directors: Phoenix Entertainment until 2019.<br><br>
 		
 		
