--- a/akon.html
+++ b/akon.html
@@ -57,6 +57,9 @@
 	A-Kon released a statement outlining the financial difficulties that hit the convention in 2018. 
 	<br><br>
 	A-Kon's financial situation illuminates many of the various issues that are ovetaking conventions and make their study difficult.
+	Owners of conventions rarely consider their own activities to be noteworthy and the financial situations are murky at best. These
+	records become obfuscated as conventions are sold, fold, or change leadership. Continuities are difficult to maintain.
+	<br><br>
 	
 	.
 	
