--- a/afo.html
+++ b/afo.html
@@ -29,7 +29,7 @@
             <a class="nav-link" href="https://fandinod.github.io/americanconventions/mapping">Mapping Fandom</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://fandinod.github.io/americanconventions/contact">Contact</a>
+            <a class="nav-link" href="https://fandinod.github.io/americanconventions/introduction">Introduction</a>
           </li>
 </ul>
 </div>
