--- a/introduction.html
+++ b/introduction.html
@@ -65,7 +65,15 @@ The 1980s were highly uncertain years when a new post-modern, post-American orde
 
 		
 <br>
-<p>George Lipsitz notes that contemporary social historians turn to popular culture to broaden the archive of available evidence. As Donald Lowe argues, history is not the past but rather a representation of the past.</p> 
+<p>George Lipsitz notes that contemporary social historians turn to popular culture to broaden the archive of available evidence. 
+As Donald Lowe argues, history is not the past but rather a representation of the past. Conventions represented a particular kind
+of constructed space, as convention staff and attendees build their own particular visions of intersecting priorities and beliefs.
+The convention space of anime conventions is especially liminal, as ideas of a real and imagined Japan collide within a localized and
+limited space. As with the early internet, the convention space itself allowed for exploration of identity, sexuality and independence
+within a framework of an imagined Japan, complete with fetishization of the Other.
+	<br><br>
+		
+		</p> 
 		Anime conventions and fan conventions in general have not received academic attention. However, with the
 		monumental success of the Marvel Cinematic Universe and the public embrace of what was once a niche fandom,
 		the roots of this process in American culture should be understood. As with many pop culture, the ephemera of
@@ -74,7 +82,8 @@ The 1980s were highly uncertain years when a new post-modern, post-American orde
 		Conventions are in the midst of one of the largest shifts in direction since the 1980s. As conventions dealt
 		with a relatively small fanbase and run by volunteers or ad-hoc groups, many lasted only a few years or have maintained
 		the same locations and guiding principles. However, the profitability of fandom has become apparent to a larger community
-		and large entertainment corporations have begun to buy existing conventions or start their own. 
+		and large entertainment corporations have begun to buy existing conventions or start their own. This transition is 
+		problematic for the study of conventions as previous records are often lost in the transition.
 		<br><br>
 		
 <h1 class="display-5">About</h1>
