--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
     
     <!--自分が好きじゃないの-->  <p class="m-0 text-center text-white">American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States.
                                             Click on the map below to learn more about a convention. For an overview of the project, visit Introduction in the top menu.</p>
-
-https://fandinod.github.io/americanconventions/afo    <!--自分が好きじゃないの--></header>
+    <!--自分が好きじゃないの--></header>
  
 
     <!-- Page Features -->
